# fireflow

./: .gitignore  COMMON_ISSUES.md  Cargo.toml  Makefile  README.md  STANDARD.md  TERMINOLOGY.md
.github/workflows/: Docs4NIST.yml  ci.yml
crates/fireflow-cli/: Cargo.toml  README.md  main.rs
crates/fireflow-cli/src/: main.rs
crates/fireflow-core/: Cargo.toml
crates/fireflow-core/src/: api.rs  config.rs  core.rs  data.rs  datepattern.rs  error.rs  header.rs  header_text.rs  keywords.rs  lib.rs  macros.rs  nonempty.rs  ns_meas_pattern.rs  optionalkw.rs  python.rs  segment.rs  shortname.rs  test.rs  textdelim.rs
crates/fireflow-core/src/data/: core.rs
crates/fireflow-core/src/python/: api.rs  core.rs  data.rs  exceptions.rs  macros.rs  mod.rs
crates/fireflow-core/src/text/: byteord.rs  compensation.rs  core.rs  datetimes.rs  float_decimal.rs  float_or_int.rs  gating.rs  index.rs  keywords.rs  mod.rs  modified_date_time.rs  named_vec.rs  optional.rs  optionalkw.rs  parser.rs  range.rs  ranged_float.rs  scale.rs  spillover.rs  timestamps.rs  unstainedcenters.rs
crates/fireflow-core/src/validated/: ascii_range.rs  ascii_uint.rs  bitmask.rs  byteord.rs  dataframe.rs  datepattern.rs  datetimes.rs  distinct.rs  keys.rs  mod.rs  nonempty_string.rs  nonstandard.rs  other_width.rs  pattern.rs  ranged_float.rs  shortname.rs  spillover.rs  standard.rs  sub_pattern.rs  textdelim.rs  timepattern.rs  timestamps.rs  uint_8char.rs  unstainedcenters.rs
crates/fireflow-python/: Cargo.toml
crates/fireflow-python-docstring/: Cargo.toml
crates/fireflow-python-docstring/src/: lib.rs
crates/fireflow-python-proc/: Cargo.toml
crates/fireflow-python-proc/src/: docstring.rs  lib.rs
crates/fireflow-python/src/: lib.rs
pyreflow/: .mypy-stubtest-allowlist  .mypy-stubtest-whitelist  Cargo.toml  pyproject.toml  requirements-dev.txt  requirements-lint.txt
pyreflow/docs/source/: api.rst  conf.py  core.rst  fcs_read.rst  gating.rst  index.rst  install.rst  layout.rst  measurement.rst  quickstart.rst  reader.rst  terminology.rst  toplevel.rst  workflow.rst
pyreflow/docs/source/_templates/: layout.html
pyreflow/python/pyreflow/: __init__.py  _api.py  _pyreflow.pyi  api.py  typing.py
pyreflow/src/: class.rs  layout.rs  lib.rs  macros.rs  utils.rs
pyreflow/tests/: conftest.py  test_all.py  test_read_write.py
src/: api.rs  config.rs  error.rs  keywords.rs  main.rs  numeric.rs  segment.rs
