[workspace]
resolver = "2"
members = [
  "crates/*",
  "pyreflow",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
chrono = "0.4.40"
itertools = "0.14.0"
num_enum = "0.7.4"
num-traits = "0.2.19"
num-derive = "0.4.2"
bigdecimal = "0.4.8"
derive_more = "2.0.1"
derive-new = "0.7.0"
nalgebra = "0.33.2"
nonempty = "0.11.0"
polars = { version = "0.49.0", features = ["dtype-u8", "dtype-u16", "fmt"] }
pyo3 = "0.25.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

# restrinction lints
absolute_paths = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
non_zero_suggestions = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
semicolon_inside_block = "warn"
unseparated_literal_suffix = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"

# arithmetic_side_effects = "warn"
# as_conversions = "warn"
# exhaustive_enums = "warn"
# exhaustive_structs = "warn"
# field_scoped_visibility_modifiers = "warn"
# indexing_slicing = "warn"
# let_underscore_must_use = "warn"
# let_underscore_untyped = "warn"
# map_err_ignore = "warn"
# missing_asserts_for_indexing = "warn"
# partial_pub_fields = "warn"
# pattern_type_mismatch = "warn"
# pub_use = "warn" # (FP for ambassador)
# undocumented_unsafe_blocks = "warn"