[workspace]
resolver = "2"
members = [
  "crates/*",
  "pyreflow",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
chrono = "0.4.40"
itertools = "0.14.0"
num_enum = "0.7.4"
num-traits = "0.2.19"
num-derive = "0.4.2"
bigdecimal = "0.4.8"
derive_more = "2.0.1"
derive-new = "0.7.0"
nalgebra = "0.33.2"
nonempty = "0.11.0"
polars = { version = "0.49.0", features = ["dtype-u8", "dtype-u16", "fmt"] }
pyo3 = "0.25.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# TODO fix these once we have the docs published
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

###
# restriction lints: footguns (stuff that likely implies a mistake)
###
# arithmetic_side_effects = "warn"
as_conversions = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
default_numeric_fallback = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
# indexing_slicing = "warn"
infinite_loop = "warn"
# let_underscore_must_use = "warn"
# let_underscore_untyped = "warn"
lossy_float_literal = "warn"
# map_err_ignore = "warn"
# missing_asserts_for_indexing = "warn"
multiple_unsafe_ops_per_block = "warn"
partial_pub_fields = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unused_result_ok = "warn"

###
# restriction lints: debug (things that might be leftover from debugging)
###
cfg_not_test = "warn"
dbg_macro = "warn"
exit = "warn"
missing_assert_message = "warn"
tests_outside_test_module = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
use_debug = "warn"

###
# restriction lints: redundancy (things that usually lead to consice code)
###
absolute_paths = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
map_with_unused_argument_over_ranges = "warn"
multiple_inherent_impl = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"

###
# restriction lints: style (my opinions)
###
clone_on_ref_ptr = "warn"
decimal_literal_representation = "warn"
error_impl_error = "warn"
# exhaustive_enums = "warn"
# exhaustive_structs = "warn"
# field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
large_include_file = "warn"
mixed_read_write_in_expression = "warn"
non_zero_suggestions = "warn"
# pattern_type_mismatch = "warn"
precedence_bits = "warn"
# pub_use = "warn" # (FP for ambassador)
pub_without_shorthand = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
unseparated_literal_suffix = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unused_trait_names = "warn"
verbose_file_reads = "warn"

# nursery
use_self = "warn"