[package]
name = "pyreflow"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "pyreflow"
crate-type = ["cdylib"]

[dependencies]
fireflow-core = { version = "0.1.0", path = "../crates/fireflow-core", features = ["python"] }
derive_more = { workspace = true }
pyo3 = { version = "0.25.1", features = ["extension-module", "multiple-pymethods", "chrono", "bigdecimal"] }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
polars = { version = "0.49.0" }
pyo3-polars = { version = "0.22.0" }
polars-arrow = { version = "0.49.0" }
itertools = { workspace = true }
nalgebra = { workspace = true }
numpy = { version = "0.25", features = ["nalgebra"] }
nonempty = { workspace = true }