[package]
name = "pyreflow"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "pyreflow"
crate-type = ["cdylib"]

[dependencies]
fireflow-core = { version = "0.1.0", path = "../crates/fireflow-core", features = ["python"] }
fireflow-python = { version = "0.1.0", path = "../crates/fireflow-python" }
pyo3 = { workspace = true, features = ["multiple-pymethods", "chrono", "bigdecimal"] }