[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "pyreflow"
description = "Fully-compliant Flow Cytometry Standard (FCS) read/write library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "pyreflow._pyreflow"
features = ["pyo3/extension-module"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"