[package]
name = "fireflow-cli"
version = { workspace = true }
edition = { workspace = true }
description = """
Command line interface for fireflow
"""

[[bin]]
bench = false
path = "src/main.rs"
name = "fireflow"

[dependencies]
clap = { version = "4.5.31", features = ["wrap_help"] }
fireflow-core = { version = "0.1.0", path = "../fireflow-core", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nonempty = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true