[package]
name = "fireflow-core"
version = { workspace = true }
edition = { workspace = true }
description = """
Core library code for fireflow.
"""

[dependencies]
chrono = { workspace = true }
regex = "1.11.1"
derive_more = { workspace = true }
itertools = { workspace = true }
num_enum = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
bigdecimal = { workspace = true }
ambassador = "0.4.1"
unicase = "2.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nalgebra = { workspace = true }
polars-arrow = { version = "0.49.0" }
nonempty = { workspace = true }
once_cell = { version = "1.21.3" }