[package]
name = "fireflow-core"
version = { workspace = true }
edition = { workspace = true }
description = """
Core library code for fireflow.
"""

[dependencies]
chrono = { workspace = true }
regex = "1.11.1"
derive_more = { workspace = true, features = ["from", "into", "display", "from_str", "as_ref", "add", "mul"] }
itertools = { workspace = true }
num_enum = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
bigdecimal = { workspace = true }
ambassador = "0.4.1"
unicase = "2.8.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
nalgebra = { workspace = true }
polars-arrow = "0.49.0"
nonempty = { workspace = true }
once_cell = "1.21.3"
pyo3 = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "nalgebra/serde-serialize", "bigdecimal/serde", "chrono/serde"]
python = ["dep:pyo3"]