[package]
name = "fireflow-core"
version = { workspace = true }
edition = { workspace = true }
description = """
Core library code for fireflow.
"""

[dependencies]
chrono = { workspace = true, features = ["clock"] }
thiserror = "2.0.17"
regex = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display", "from_str", "as_ref", "add", "mul", "into_iterator"] }
derive-new = { workspace = true }
itertools = { workspace = true }
num_enum = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
bigdecimal = { workspace = true }
ambassador = "0.4.1"
unicase = "2.8.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
nalgebra = { workspace = true }
polars-arrow = "0.49.0"
nonempty = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-polars = { version = "0.22.0", optional = true }
polars = { version = "0.49.0", optional = true }
numpy = { version = "0.25", features = ["nalgebra"], optional = true }

[features]
serde = ["dep:serde", "nalgebra/serde-serialize", "bigdecimal/serde", "chrono/serde"]
python = ["dep:pyo3", "dep:pyo3-polars", "dep:polars", "dep:numpy"]

[lints]
workspace = true