[package]
name = "fireflow-python-proc"
version.workspace = true
edition.workspace = true

[dependencies]
derive-new = { workspace = true }
derive_more = { workspace = true, features = ["from", "as_ref", "display"] }
fireflow-core = { version = "0.1.0", path = "../fireflow-core" }
syn = { version = "*", features = ["extra-traits"] }
itertools = { workspace = true }
quote = "*"
proc-macro2 = "*"

[lib]
proc-macro = true
