[package]
name = "fireflow-python"
version = { workspace = true }
edition = { workspace = true }
description = """
Python-specific code for fireflow.
"""

[dependencies]
fireflow-core = { path = "../fireflow-core", features = ["python"] }
fireflow-python-proc = { path = "../fireflow-python-proc" }
fireflow-python-docstring = { path = "../fireflow-python-docstring" }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["from", "into"] }
nonempty = { workspace = true }
pyo3 = { workspace = true }
pyo3-polars = { version = "0.22.0" }
polars = { workspace = true }
numpy = { version = "0.25", features = ["nalgebra"] }